--- a/app/src/main/res/layout/activity_lista_alunos.xml
+++ b/app/src/main/res/layout/activity_lista_alunos.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:contentDescription="@string/todo" />
 
     <ListView
         android:id="@+id/activity_lista_alunos_listview"
